provarAnt/00D1b0000000d5bEAA/objects/Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>PC_Resolution__c</fullName>
        <description>PC Resolution for Action Plans</description>
        <inlineHelpText>PC Resolution for Action Plans</inlineHelpText>
        <label>PC Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>TIM - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Sale Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Sale Not Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-Dealer Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-Dealer Handling Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-No Response Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-No Response Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM - Website Integration-Vendor Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Confirmed__c</fullName>
        <label>Phone Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Photos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>In leiu</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Comments__c</fullName>
        <description>Products comments field</description>
        <label>Products Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_Delivered__c</fullName>
        <label>Products Delivered</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMS_Automotive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RMS Automotive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_Transport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready Logistics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Real_Time_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Time Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reconditioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconditioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redirect_Link_Confirmed__c</fullName>
        <label>Redirect Link Confirmed</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account__r.SVOC_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_Reviewed_Other_Text__c</fullName>
        <label>Reports Reviewed (Other)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Follow_up_Date__c</fullName>
        <label>Requested Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Info_Other_Text__c</fullName>
        <label>Requested Info (Other)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Info_Other__c</fullName>
        <label>Requested Info (Other)_Old</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Comments__c</fullName>
        <label>Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SC_Dealer_Follow_Up_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SC to follow up with dealer</description>
        <inlineHelpText>Follow up call with dealer</inlineHelpText>
        <label>SC Dealer Follow Up Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Follow_Up_Call_w_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SC follow-up call with Dealer</description>
        <inlineHelpText>SC follow-up call with Dealer</inlineHelpText>
        <label>SC Follow Up Call w Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Follow_Up_EMail_with_Dealer_AC_DSM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SC follow up call and email with Dealer, AC and DSM</description>
        <inlineHelpText>SC follow up call and email with Dealer, AC and DSM</inlineHelpText>
        <label>SC Follow Up/EMail with Dealer/AC/DSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Follow_Up_call_w_AC_DSM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SC follow-up call with AC/DSM</description>
        <inlineHelpText>SC follow-up call with AC/DSM</inlineHelpText>
        <label>SC Follow Up call w AC/DSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVOC_District__c</fullName>
        <formula>Account__r.SVOC_District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_ID__c</fullName>
        <formula>Account__r.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Region__c</fullName>
        <formula>Account__r.SVOC_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Status__c</fullName>
        <formula>TEXT(Account__r.SVOC_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Credit_App_Email__c</fullName>
        <label>Secure Credit App Email</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Specialties_Verified__c</fullName>
        <label>Services/Specialties Verified</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Showcase_Ad_Current__c</fullName>
        <label>Showcase Ad Current</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Showcase_Ad__c</fullName>
        <label>Showcase Ad</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Churned Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIM_IC_Completed_Date__c</fullName>
        <description>field to capture when the IC completed their Implementation</description>
        <inlineHelpText>field to capture when the IC completed their Implementation</inlineHelpText>
        <label>TIM IC Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TIM_IC_Narrative__c</fullName>
        <description>field to capture the TIM IC Initial narrative on the TIM Action Plan</description>
        <inlineHelpText>field to capture the TIM IC Initial narrative on the TIM Action Plan</inlineHelpText>
        <label>TIM IC Narrative</label>
        <length>10755</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TIM_Link_Verified__c</fullName>
        <label>TIM Link Verified</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIM_PC_Completed_Date__c</fullName>
        <description>field to capture the date the PC completed their Implementation</description>
        <inlineHelpText>field to capture the date the PC completed their Implementation</inlineHelpText>
        <label>TIM PC Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TIM_PC_Narrative__c</fullName>
        <description>field to capture the narrative from the Initial Implementation Setup</description>
        <inlineHelpText>field to capture the narrative from the Initial Implementation Setup</inlineHelpText>
        <label>TIM PC Narrative</label>
        <length>10755</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Comments__c</fullName>
        <label>Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trade_In_Marketplace_RI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade-In Marketplace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_In_Marketplace_RR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KBB ICO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_In_Marketplace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KBB Instant Cash Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Consultant_s__c</fullName>
        <label>Trade Show Consultant(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Aaron Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aaron Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Acosta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpesh Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Bionodo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April Forslin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Reed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooke Backensto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad Holliday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Ortman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cindy Robinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Cole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denise Husak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diane Farber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Whittle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elizabeth LaFreniere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Dipietrantonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gregg Holbrook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harry Baylies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jay Nieman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Allen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer Vranic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jillann McGee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joanie Neal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Buschini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jonathan Finn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joseph Perry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Josh Sinski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JR Cook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerstin Todd</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Name__c</fullName>
        <defaultValue>&quot;Trade Show&quot;</defaultValue>
        <label>Trade Show Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tune_Up_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tune Up Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL_Clickthrough__c</fullName>
        <label>URL Clickthrough</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_Email_Address__c</fullName>
        <label>Used Email Address</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_Scorecard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used Scorecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vin_Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VinSolutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WBFM_Specific_Make_New_Car__c</fullName>
        <label>WBFM Specific Make - New Car</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WBFM_Statements_New__c</fullName>
        <label>WBFM Statements - New</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WBFM_Statements_Used__c</fullName>
        <label>WBFM Statements - Used</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weekly_Touchpoint_1_Completed__c</fullName>
        <label>Weekly Touchpoint 1 Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weekly_Touchpoint_2_Completed__c</fullName>
        <label>Weekly Touchpoint 2 Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weekly_Touchpoint_3_Completed__c</fullName>
        <label>Weekly Touchpoint 3 Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Completed_Date__c</fullName>
        <label>Welcome Call Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Due_Date__c</fullName>
        <label>Welcome Call Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_s_New_Other_Text__c</fullName>
        <label>What&apos;s New (Other)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_s_New_at_AutoTrader_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New at AutoTrader.com/Kelley Blue Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X30_Day_Review_Completed__c</fullName>
        <label>30 Day Review Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X30_Day_Review_Due_Date__c</fullName>
        <label>30 Day Review Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X30_Day_Touchpoint_Comments__c</fullName>
        <label>30-Day Touchpoint Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X60_Day_Audit_Completed_Date__c</fullName>
        <label>60 Day Audit Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X60_Day_Audit_Due_Date__c</fullName>
        <label>60 Day Audit Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X60_Day_Review_Completed__c</fullName>
        <label>60 Day Review Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X60_Day_Review_Due_Date__c</fullName>
        <label>60 Day Review Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X60_Day_Touchpoint_Comments__c</fullName>
        <label>60-Day Touchpoint Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X7_Day_Review_Completed__c</fullName>
        <label>7 Day Review Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X7_Day_Review_Due_Date__c</fullName>
        <label>7 Day Review Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X7_Day_Touchpoint_Comments__c</fullName>
        <label>7-Day Touchpoint Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XML_Email__c</fullName>
        <label>XML Email</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>XTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vAuto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>vAuto</label>
        <type>Checkbox</type>
    </fields>
    <label>Action Plan</label>
    <listViews>
        <fullName>ATC_Action_Plans_All</fullName>
        <columns>NAME</columns>
        <columns>Action_Plan_Name__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Action_Plan_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Plan__c.ATC_Action_Plan</value>
        </filters>
        <label>ATC Action Plans - All</label>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATC_Action_Plans_Churned</fullName>
        <columns>NAME</columns>
        <columns>Action_Plan_Name__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Plan__c.ATC_Action_Plan</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Churned Customer</value>
        </filters>
        <label>ATC Action Plans - Churned</label>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATC_Action_Plans_Open</fullName>
        <columns>NAME</columns>
        <columns>Action_Plan_Name__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Plan__c.ATC_Action_Plan</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Churned Customer</value>
        </filters>
        <label>ATC Action Plans - Open</label>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Action_Plans</fullName>
        <columns>NAME</columns>
        <columns>Action_Plan_Name__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Action Plans</label>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Action_Plans_All_Service_Plus</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Action Plans - All</label>
        <sharedTo>
            <role>ATC_Service_Service_Plus_Mgr</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_High_Risk_Action_Plans</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SVOC_ID__c</columns>
        <columns>Status__c</columns>
        <columns>X7_Day_Review_Due_Date__c</columns>
        <columns>X7_Day_Review_Completed__c</columns>
        <columns>X30_Day_Review_Due_Date__c</columns>
        <columns>X30_Day_Review_Completed__c</columns>
        <columns>X60_Day_Review_Due_Date__c</columns>
        <columns>X60_Day_Review_Completed__c</columns>
        <columns>X90_Day_Review_Due_Date__c</columns>
        <columns>X90_Day_Review_Completed__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Applicable</value>
        </filters>
        <filters>
            <field>Action_Plan_Type__c</field>
            <operation>contains</operation>
            <value>high risk</value>
        </filters>
        <label>My High Risk Action Plans</label>
        <sharedTo>
            <role>ATC_Service_Service_Plus_Mgr</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_New_Business_Action_Plans</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SVOC_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Welcome_Call_Due_Date__c</columns>
        <columns>Welcome_Call_Completed_Date__c</columns>
        <columns>X60_Day_Audit_Due_Date__c</columns>
        <columns>X60_Day_Audit_Completed_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Not Applicable</value>
        </filters>
        <filters>
            <field>Action_Plan_Type__c</field>
            <operation>equals</operation>
            <value>New Customer</value>
        </filters>
        <label>My New Business Action Plans</label>
        <sharedTo>
            <role>ATC_Service_Service_Plus_Mgr</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TIM_Implementation_Complete_Action_Plan</fullName>
        <filterScope>Queue</filterScope>
        <label>TIM Implementation Complete</label>
        <queue>TIM_Implementation_Complete</queue>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TIM_Implementation_Queue_Action_Plan</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>TIM Implementation Queue</label>
        <queue>TIM_Implementation_Queue</queue>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tradeshow_Action_Plans_Last_7_Days</fullName>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Plan__c.NADA</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Tradeshow Action Plans - Last 7 Days</label>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tradeshow_Action_Plans_Today_All</fullName>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Plan__c.NADA</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Tradeshow Action Plans - Today All</label>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tradeshow_Action_Plans_Today_No_Dealer1</fullName>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Plan__c.NADA</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Tradeshow Action Plans - Today No Dealer</label>
        <sharedTo>
            <roleAndSubordinates>ATC_All_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tradeshow_View</fullName>
        <columns>SVOC_ID__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Plan__c.NADA</value>
        </filters>
        <label>Tradeshow View</label>
        <sharedTo>
            <group>NADA</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Action Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <recordTypes>
        <fullName>ATC_Action_Plan</fullName>
        <active>true</active>
        <description>Action Plan for AutoTrader.com Teams</description>
        <label>ATC Action Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>High_Risk</fullName>
        <active>true</active>
        <description>record type for High Risk action plans</description>
        <label>High Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>NADA</fullName>
        <active>true</active>
        <label>Trade Show</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Business</fullName>
        <active>true</active>
        <description>action plan for Service Plus</description>
        <label>New Business</label>
    </recordTypes>
</CustomObject>